# dialog-backend

./: .dockerignore  .gitignore  Dockerfile  check_case_table.py  check_patient.py  check_tables.py  config.py  create_tables.sql  debug_token.py  generate_login_code.py  main.py  pyproject.toml  register_and_test.py  requirements.txt  test_blood_glucose_api.py  test_blood_glucose_debug.py  test_blood_glucose_with_token.py  test_login.py  test_password_hash.py  test_risk_engine.py  tutorial.txt
api/: AI_server.py  CKD_server.py  admin.py  admin_auth.py  api.py  auth.py  auth_code.py  case.py  chat.py  chat_history.py  chat_server.py  code_login_generator.py  feedback.py  food_images_service.py  food_service.py  key_word_to_text_server.py  keyword_cloud.py  messages.py  newmessages.py  nurse.py  nurses.py  patients.py  questionnaire_server.py  register.py  register_code.py  risk_server.py  robot.py  s3_service.py  session.py  sms_router.py  speech_recognition_server.py  test.py  user.py  users.py  wechat_message.py
core/: auth.py  llm.py  margin.py  risk_engine.py  services.py  sms_code.py  translate.py  utils.py
information_processing/: en_regex.py  zh_tw_regex.py
resources/: services.json
schema/: case.py  chat_schema.py  food_image.py  response.py  token.py  user.py
sql/: admin_crud.py  admin_models.py  ai_curd.py  cache_database.py  chat_histoty_curd.py  ckd_curd.py  ckd_model.py  common_curd.py  common_model.py  common_schemas.py  crud.py  login_crud.py  login_models.py  models.py  nurse_curd.py  nurse_login_code_curd.py  patient_curd.py  people_models.py  (+7 more)
(+12 files in other folders)
